fixes and readme